Fix responsive design
Hide nav before it flows offscreen. Break title at "Get Married". Hide subtitle before it wraps.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -126,3 +126,10 @@ body {
     }
   }
 }
+
+
+// HELEPRS
+
+.break_block {
+  white-space: nowrap;
+}
